i hope this is working

--- a/recipes/baked-sweet-and-sour-chicken.html
+++ b/recipes/baked-sweet-and-sour-chicken.html
@@ -7,5 +7,25 @@
 </head>
 <body>
     <h1>Baked Sweet & Sour Chicken</h1>
+    </picture><img src="./8654805-baked-sweet-sour-chicken-ddmfs-4x3-a84d85597d344406b09cc6b562c6ec92.webp" alt="it looks exactly how you imagined" height="310" width="310">
+    <p>This baked sweet and sour chicken is very savory sweet and the chicken gets wonderfully crispy</p>
+    <p>Serve over rice just like in your favorite <strong><em>Chinese</em></strong> restaurant</p>
+    <h2><strong>Ingredients</strong></h2>
+    <ul>
+        <li><sup>1</sup>/<sub>2</sub> cup olive oil, divided</li>
+        <li>4 boneless chicken thighs</li>
+        <li><sup>1</sup>/<sub>2</sub> teaspoon freshly ground black pepper</li>
+        <li>3 <sup>1</sup>/<sub>2</sub> teaspoon salt</li>
+        <li>4 large eggs</li>
+        <li>2 cups flour</li>
+        <li>4 bell pepper, sliced</li>
+        <li>1 cup ketchup</li>
+        <li><sup>1</sup>/<sub>2</sub> cup honey</li>
+        <li>6 tablespoons soy sauce</li>
+        <li>2 tablespoons vinegar</table></li>
+        <li>1.5 quart cooked white rice</li>
+    </ul>
+    <h2><strong>Steps</strong></h2>
+        <p>Follow recipes <a href="https://www.allrecipes.com/baked-sweet-and-sour-chicken-recipe-8654805">here</a></p>
 </body>
 </html>
